实现显示定位信息，封装header组件

--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,7 @@
       href="//netdna.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
       rel="stylesheet"
     />
+    <script type="text/javascript" src="https://webapi.amap.com/maps?v=1.4.13&key=fe5f3152714a811efdd21182aec3e3ac"></script> 
     <style>
       html,body{
         width: 100%;
